# verifiers

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
.cursor/: BUGBOT.md
.github/workflows/: README.md  publish-harnesses.yml  publish-tasksets.yml  publish-verifiers.yml  style.yml  tag-and-release.yml  test.yml
.semgrep/: verifiers.yml
assets/agents/: common_best_practices.md  compilation_design.md  end_user_best_practices.md  repo_development_best_practices.md
assets/lab/: AGENTS.md  CLAUDE.md  README.md
assets/release/: RELEASE_v0.1.11.md  RELEASE_v0.1.12.md  RELEASE_v0.1.13.dev1.md  RELEASE_v0.1.13.dev2.md  RELEASE_v0.1.13.dev3.md  RELEASE_v0.1.13.dev4.md  RELEASE_v0.1.13.dev5.md  RELEASE_v0.1.13.dev6.md  RELEASE_v0.1.13.dev7.md  RELEASE_v0.1.13.dev8.md  RELEASE_v0.1.14.md  RELEASE_v0.1.15.dev0.md  RELEASE_v0.1.15.dev1.md  RELEASE_v0.1.15.dev10.md  RELEASE_v0.1.15.dev11.md  RELEASE_v0.1.15.dev12.md  RELEASE_v0.1.15.dev18.md  RELEASE_v0.1.15.dev2.md  RELEASE_v0.1.15.dev3.md  RELEASE_v0.1.15.dev4.md  RELEASE_v0.1.15.dev5.md  RELEASE_v0.1.15.dev6.md  RELEASE_v0.1.15.dev7.md  RELEASE_v0.1.15.dev8.md  RELEASE_v0.1.15.dev9.md  RELEASE_v0.1.9.md  RELEASE_v0.1.9.post0.md  RELEASE_v0.1.9.post1.md  RELEASE_v0.1.9.post2.md  RELEASE_v0.1.9.post3.md  release_workflow.md
docs/: byo-harness.md  development.md  environments.md  evaluation.md  faqs.md  mint.json  multi_agent_architecture.md  overview.md  reference.md  training.md
environments/: AGENTS.md  README.md
environments/alphabet_sort/: alphabet_sort.py  alphabet_sort_v1.py  pyproject.toml
environments/bfcl_v3/: README.md  bfcl_v3.py  pyproject.toml
environments/browser_cua_example/: pyproject.toml
environments/browser_dom_example/: pyproject.toml
environments/continuation_quality/: continuation_quality.py  pyproject.toml
environments/doublecheck/: pyproject.toml
environments/dspy_flights/: README.md  dspy_flights.py  pyproject.toml
environments/dspy_rlm/: README.md  dspy_rlm.py  pyproject.toml
environments/gem_wordle/: pyproject.toml
environments/gpqa_consultancy/: README.md  gpqa_consultancy.py  pyproject.toml
environments/gpqa_debate/: README.md  gpqa_debate.py  pyproject.toml
environments/gpqa_open_ended_debate/: README.md  gpqa_open_ended_debate.py  pyproject.toml
environments/gpqa_rlvr/: README.md  gpqa_rlvr.py  pyproject.toml
environments/gsm8k/: pyproject.toml
environments/hello_group_reward_v1/: README.md  hello_group_reward_v1.py  pyproject.toml
environments/hello_mcp_harbor/: README.md  hello_mcp_harbor.py  pyproject.toml
environments/hello_mcp_harbor/mcp_server/: server.py
environments/hello_mcp_harbor/tasks/hello-mcp/: instruction.md  task.toml
environments/hello_mcp_harbor/tasks/hello-mcp/solution/: solve.sh
environments/hello_mcp_harbor/tasks/hello-mcp/tests/: test.sh  test_outputs.py
environments/hello_parallel_sandbox_v1/: README.md  hello_parallel_sandbox_v1.py  pyproject.toml
environments/hello_rlm_v1/: README.md  hello_rlm_v1.py  pyproject.toml
environments/hello_self_judge_v1/: README.md  hello_self_judge_v1.py  pyproject.toml
environments/hello_subagent_v1/: README.md  hello_subagent_v1.py  pyproject.toml
environments/hf_debate/: README.md  hf_debate.py  pyproject.toml
environments/hf_singleturn/: README.md  hf_singleturn.py  pyproject.toml
environments/langchain_deep_agents_wikispeedia/: README.md  langchain_deep_agents_wikispeedia.py  pyproject.toml  wiki_graph.py
environments/math_group/: pyproject.toml
environments/math_python/: math_python.py  math_python_v1.py  pyproject.toml
environments/mcp_search_env/: README.md  mcp_search_env.py  mcp_server.py  pyproject.toml
environments/mmmu/: pyproject.toml
environments/nemo_gym_env/: README.md  pyproject.toml
environments/nemo_gym_env/nemo_gym_env/: __init__.py  env.py
environments/nested_harness_v1/: README.md  nested_harness_v1.py  pyproject.toml
environments/openai_agents_env/: README.md  openai_agents_env.py  pyproject.toml
environments/opencode_harbor/: README.md  opencode_harbor.py  pyproject.toml
environments/openenv_echo/: README.md  openenv_echo.py  pyproject.toml
environments/openenv_textarena/: README.md  openenv_textarena.py  pyproject.toml
environments/openenv_textarena/proj/: client.py  models.py  pyproject.toml  rewards.py
environments/openenv_textarena/proj/server/: Dockerfile  app.py  environment.py
environments/reasoning_gym_env/: pyproject.toml
environments/reverse_text/: pyproject.toml  reverse_text.py  reverse_text_v1.py
environments/rlm_swe_v1/: README.md  pyproject.toml  rlm_swe_v1.py
environments/self_reward/: pyproject.toml  self_reward.py
environments/sft_replay/: README.md  pyproject.toml  sft_replay.py
environments/sft_replay/data/: reverse.jsonl
environments/tau2_bench_v1/: README.md  pyproject.toml  tau2_bench_v1.py
environments/tool_test/: pyproject.toml
scripts/: rl.py  sync.py
tests/: conftest.py  test_agent_bindings.py  test_agent_overrides_resolver.py  test_api_profile.py  test_byte_budget.py  test_cli_agent_env.py  test_client_auth_errors.py  test_client_config.py  test_client_multimodal_types.py  test_client_request_headers.py  test_composable_env.py  test_context_token_metrics.py  test_debate_env_prompt_cache.py  test_debate_env_prompts_coverage.py  test_debate_env_protocol_only.py  test_debate_parsing.py  test_debate_renderer_first.py  test_debate_rubric_errored.py  test_debate_rubric_helpers.py  test_debate_rubric_truth_contract.py  test_decorator_ranks.py  test_endpoint_registry.py  test_env_group.py  test_env_router_cancel.py  test_env_server.py  test_environment.py  test_environment_extra.py  test_envs.py  test_eval_cli.py  test_eval_display.py  test_eval_utils.py  test_generation_plan_protocol.py  test_gepa_cli.py  test_gepa_utils.py  test_gpqa_environments.py  test_gym_env.py  test_harbor_env_mcp.py  test_hf_tasks.py  test_imports.py  test_init_script.py  (+62 more)
verifiers/: AGENTS.md  __init__.py  api_profile.py  decorators.py  errors.py  multi_agent_bridge.py  types.py
(+252 files in other folders)
