[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "verifiers"
authors = [
    {name = "William Brown", email = "williambrown97@gmail.com"},
]
dynamic = ["version"]  # load from verifiers/__init__.py
description = "Verifiers: Environments for LLM Reinforcement Learning"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10,<3.14"
keywords = ["reinforcement-learning", "llm", "rl", "grpo", "environments", "multi-turn", "agents", "agentic-rl", "tool-use", "train", "eval", "harness", "verifiers", "rlvr"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "anthropic>=0.78.0",
    "datasets>=3.0.0, <4.7.0",
    "jinja2>=3.1.6",
    "numpy",
    "math-verify>=0.8.0",
    "mcp>=1.14.1",
    "nest-asyncio>=1.6.0", # for jupyter notebooks
    "openai>=1.108.1",
    "openai-agents>=0.0.7",
    "prime-tunnel>=0.1.6",
    "prime-sandboxes>=0.2.25",
    "pydantic>=2.11.9",
    "requests",
    "rich",
    "tenacity>=8.5.0",
    "textual",
    "tomli; python_version < '3.11'",
    "typing_extensions; python_version < '3.12'",
    "gepa",
    "pyzmq>=27.1.0",
    "msgpack>=1.1.2",
    "aiolimiter>=1.2.1",
    "setproctitle>=1.3.0",
    "regex<2026.4.4",
    "httpx>=0.27.0",
    "pyyaml",
]

[dependency-groups]
dev = [
    "ruff",
    "pre-commit",
    "ty>=0.0.1a29,<0.0.22",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.8.0",
    "ipykernel",
    "ipywidgets",
    "reasoning-gym",
    "textarena",
    "stagehand>=3.0.0",
    "aiohttp>=3.9.0",
    "python-dotenv>=1.0.0",
    "nltk",
    "renderers>=0.1.8.dev2",
]
policy = [
    "semgrep>=1.150.0",
]

[project.optional-dependencies]
rg = [
    "reasoning-gym",
]
ta = [
    "textarena",
    "nltk",
]
browser = [
    "stagehand>=3.0.0",
    "aiohttp>=3.9.0",
    "python-dotenv>=1.0.0",
]
openenv = [
    "openenv-core>=0.3.0",
]
renderers = [
    "renderers>=0.1.8.dev2",
]
rl = [
    "torch>=2.8.0,<2.9.0",
    "transformers>=4.56.2",
    "accelerate>=1.4.0",
    "requests",
    "peft",
    "wandb",
    "vllm>=0.10.0,<0.11.0",
    "liger-kernel>=0.5.10",
    "deepspeed>=0.17.6",
    "flash-attn>=2.8.3",
]

[tool.uv]
preview = true
required-version = ">=0.11.1"
conflicts = [
    [
        { extra = "openenv" },
        { group = "policy" },
    ],
]
[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
default = true
exclude-newer = "7 days"

[tool.uv.exclude-newer-package]
# PrimeIntellect-published on PyPI (trusted publisher)
prime-tunnel = false
prime-sandboxes = false
renderers = false
openenv-core = false

[tool.uv.extra-build-dependencies]
flash-attn = [{ requirement = "torch", match-runtime = true }]

[tool.uv.extra-build-variables]
flash-attn = { FLASH_ATTENTION_SKIP_CUDA_BUILD = "TRUE" }

[tool.ruff]
exclude = [
    ".semgrep",
]

[project.scripts]
vf-eval = "verifiers.scripts.eval:main"
vf-gepa = "verifiers.scripts.gepa:main"
vf-init = "verifiers.scripts.init:main"
vf-install = "verifiers.scripts.install:main"
vf-setup = "verifiers.scripts.setup:main"
vf-build = "verifiers.scripts.build:main"
vf-rl = "verifiers.scripts.rl:main"
vf-train = "verifiers.scripts.train:main"
vf-tui = "verifiers.scripts.tui:main"
vf-vllm = "verifiers.scripts.vllm:main"

# hatchling configuration
[tool.hatch.version]
path = "verifiers/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/verifiers",
    "/tests",
    "/README.md",
    "/LICENSE",
]
exclude = [
    "/wandb",
    "/scratch",
    "/configs",
    "/environments",
]

[tool.hatch.build.targets.wheel]
packages = ["verifiers"]


[project.urls]
Homepage = "https://github.com/primeintellect-ai/verifiers"
Documentation = "https://github.com/primeintellect-ai/verifiers"
Repository = "https://github.com/primeintellect-ai/verifiers.git"
Issues = "https://github.com/primeintellect-ai/verifiers/issues"

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--tb=short",
    "-ra",
    "--quiet",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "prime_sandbox: marks tests that provision real Prime sandbox or tunnel resources",
    "unit: marks tests as unit tests",
    "asyncio: marks tests as async tests",
    "parsers: marks tests for parser components",
    "rubrics: marks tests for rubric components",
    "environments: marks tests for environment components",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::UserWarning:transformers.*",
    "ignore:The 'repr' attribute.*:UserWarning:pydantic.*",
    "ignore:The 'frozen' attribute.*:UserWarning:pydantic.*",
    "ignore:.*is.*with.*str.*literal:SyntaxWarning:cellpylib.*",
]
asyncio_mode = "auto"
norecursedirs = [".git", ".tox", "dist", "build", "*.egg", "__pycache__"]

[tool.ty.environment]
python-version = "3.13"

[tool.ty.rules]
unknown-argument = "warn"
redundant-cast = "ignore"

[tool.ty.src]
exclude = ["environments", "verifiers/v1/sketch.py"]

[[tool.ty.overrides]]
include = ["verifiers/envs/experimental/composable/tasksets/**"]

[tool.ty.overrides.rules]
unresolved-import = "ignore"
invalid-method-override = "ignore"
invalid-assignment = "ignore"
not-iterable = "ignore"

[tool.coverage.run]
source = ["verifiers"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
