[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "verifiers"
authors = [
    {name = "William Brown", email = "williambrown97@gmail.com"},
]
dynamic = ["version"]  # derived from git tags via hatch-vcs
description = "Verifiers: Environments for LLM Reinforcement Learning"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10,<3.14"
keywords = ["reinforcement-learning", "llm", "rl", "grpo", "environments", "multi-turn", "agents", "agentic-rl", "tool-use", "train", "eval", "harness", "verifiers", "rlvr"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "anthropic>=0.78.0",
    "datasets>=3.0.0, <4.7.0",
    "jinja2>=3.1.6",
    "numpy",
    "math-verify>=0.8.0",
    "mcp>=1.14.1",
    "nest-asyncio>=1.6.0", # for jupyter notebooks
    "openai>=1.108.1",
    "openai-agents>=0.0.7",
    "prime-tunnel>=0.1.6",
    "prime-sandboxes>=0.2.25",
    "pydantic>=2.11.9",
    "requests",
    "rich",
    "tenacity>=8.5.0",
    "textual",
    "tomli; python_version < '3.11'",
    "typing_extensions; python_version < '3.12'",
    "gepa",
    "pyzmq>=27.1.0",
    "msgpack>=1.1.2",
    "aiolimiter>=1.2.1",
    "setproctitle>=1.3.0",
    "regex<2026.4.4",
    "httpx>=0.27.0",
    "pyyaml",
    "prime-pydantic-config[toml]",
    "uvloop>=0.21.0; sys_platform != 'win32' and sys_platform != 'cygwin' and platform_python_implementation != 'PyPy'",
]

[dependency-groups]
dev = [
    "ruff",
    "pre-commit",
    "ty>=0.0.1a29,<0.0.22",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.8.0",
    "ipykernel",
    "ipywidgets",
    "reasoning-gym",
    "stagehand>=3.0.0",
    "aiohttp>=3.9.0",
    "python-dotenv>=1.0.0",
    "harnesses",
    "renderers>=0.1.8.dev28",
    "tasksets[openenv,openreward,ta]",
]
policy = [
    "semgrep>=1.150.0",
]

[project.optional-dependencies]
rg = [
    "reasoning-gym",
]
ta = [
    "nltk",
    "textarena",
]
tasksets = [
    "tasksets[openenv,openreward,ta]>=0.1.5",
]
harnesses = [
    "harnesses>=0.1.2",
]
packages = [
    "harnesses>=0.1.2",
    "tasksets[openenv,openreward,ta]>=0.1.5",
]
browser = [
    "stagehand>=3.0.0",
    "aiohttp>=3.9.0",
    "python-dotenv>=1.0.0",
]
openenv = [
    "tasksets[openenv]>=0.1.5",
]
openreward = [
    "tasksets[openreward]>=0.1.5",
]
nemogym = [
    "harnesses[nemogym]>=0.1.2",
    "tasksets[nemogym]>=0.1.5",
]
renderers = [
    "renderers>=0.1.8.dev28",
]
rl = [
    "torch>=2.8.0,<2.9.0",
    "transformers>=4.56.2",
    "accelerate>=1.4.0",
    "requests",
    "peft",
    "wandb",
    "vllm>=0.10.0,<0.11.0",
    "liger-kernel>=0.5.10",
    "deepspeed>=0.17.6",
    "flash-attn>=2.8.3",
]

[tool.uv]
preview = true
required-version = ">=0.11.1"
exclude-newer = "7 days"
conflicts = [
    [
        { extra = "openenv" },
        { group = "policy" },
    ],
    [
        { extra = "nemogym" },
        { extra = "openenv" },
    ],
    [
        { extra = "nemogym" },
        { group = "dev" },
    ],
    [
        { extra = "nemogym" },
        { extra = "tasksets" },
    ],
    [
        { extra = "nemogym" },
        { extra = "packages" },
    ],
    [
        { extra = "ta" },
        { group = "policy" },
    ],
    [
        { extra = "tasksets" },
        { group = "policy" },
    ],
    [
        { extra = "packages" },
        { group = "policy" },
    ],
    [
        { extra = "openreward" },
        { group = "policy" },
    ],
    [
        { group = "dev" },
        { group = "policy" },
    ],
]

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
default = true

[tool.uv.sources]
harnesses = { path = "packages/harnesses", editable = true }
tasksets = { path = "packages/tasksets", editable = true }

[tool.uv.exclude-newer-package]
# PrimeIntellect-published on PyPI (trusted publisher)
prime-tunnel = false
prime-sandboxes = false
prime-pydantic-config = false
renderers = false
openenv-core = false
harnesses = false
tasksets = false

[tool.uv.extra-build-dependencies]
flash-attn = [{ requirement = "torch", match-runtime = true }]

[tool.uv.extra-build-variables]
flash-attn = { FLASH_ATTENTION_SKIP_CUDA_BUILD = "TRUE" }

[tool.ruff]
exclude = [
    ".semgrep",
]

[project.scripts]
vf-eval = "verifiers.scripts.eval:main"
vf-gepa = "verifiers.scripts.gepa:main"
vf-init = "verifiers.scripts.init:main"
vf-install = "verifiers.scripts.install:main"
vf-setup = "verifiers.scripts.setup:main"
vf-build = "verifiers.scripts.build:main"
vf-rl = "verifiers.scripts.rl:main"
vf-train = "verifiers.scripts.train:main"
vf-tui = "verifiers.scripts.tui:main"
vf-vllm = "verifiers.scripts.vllm:main"

# hatchling configuration
[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
local_scheme = "no-local-version"
git_describe_command = [
    "git",
    "describe",
    "--tags",
    "--long",
    "--match",
    "v[0-9]*.[0-9]*.[0-9]*",
    "--exclude",
    "*dev*",
]

[tool.hatch.build.targets.sdist]
include = [
    "/verifiers",
    "/tests",
    "/README.md",
    "/LICENSE",
]
exclude = [
    "/wandb",
    "/scratch",
    "/configs",
    "/environments",
]

[tool.hatch.build.targets.wheel]
packages = ["verifiers"]


[project.urls]
Homepage = "https://github.com/primeintellect-ai/verifiers"
Documentation = "https://github.com/primeintellect-ai/verifiers"
Repository = "https://github.com/primeintellect-ai/verifiers.git"
Issues = "https://github.com/primeintellect-ai/verifiers/issues"

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--tb=short",
    "-ra",
    "--quiet",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "prime_sandbox: marks tests that provision real Prime sandbox or tunnel resources",
    "unit: marks tests as unit tests",
    "asyncio: marks tests as async tests",
    "parsers: marks tests for parser components",
    "rubrics: marks tests for rubric components",
    "environments: marks tests for environment components",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::UserWarning:transformers.*",
    "ignore:The 'repr' attribute.*:UserWarning:pydantic.*",
    "ignore:The 'frozen' attribute.*:UserWarning:pydantic.*",
    "ignore:.*is.*with.*str.*literal:SyntaxWarning:cellpylib.*",
]
asyncio_mode = "auto"
norecursedirs = [".git", ".tox", "dist", "build", "*.egg", "__pycache__"]

[tool.ty.environment]
python-version = "3.13"

[tool.ty.rules]
unknown-argument = "warn"
redundant-cast = "ignore"

[tool.ty.src]
exclude = ["environments", "verifiers/v1/sketch.py"]

[[tool.ty.overrides]]
include = ["verifiers/envs/experimental/composable/tasksets/**"]

[tool.ty.overrides.rules]
unresolved-import = "ignore"
invalid-method-override = "ignore"
invalid-assignment = "ignore"
not-iterable = "ignore"

[tool.coverage.run]
source = ["verifiers"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
