[project]
name = "browser-dom-example"
version = "0.1.1"
description = "Example environment demonstrating DOM mode browser automation with Stagehand"
tags = ["browser", "browserbase", "dom", "stagehand", "example"]
requires-python = ">=3.10"
dependencies = [
    "verifiers[browser]>=0.1.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["browser_dom_example.py", "pyproject.toml"]

[tool.verifiers.eval]
num_examples = 5
rollouts_per_example = 3
