[project]
name = "dspy-rlm"
description = "V1 Taskset/Harness environment using DSPy's RLM module"
tags = ["v1", "taskset", "harness", "dspy", "rlm"]
version = "0.1.0"
requires-python = ">=3.11,<3.13"
dependencies = [
    "datasets",
    "dspy>=3.2.0",
    "verifiers>=0.1.13.dev8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["dspy_rlm.py", "pyproject.toml"]

[tool.verifiers.eval]
num_examples = 5
rollouts_per_example = 3
