[project]
name = "gpqa-consultancy"
version = "0.1.0"
description = "GPQA under the Khan-et-al-2024 consultancy protocol (single agent + LLM judge)"
readme = "README.md"
tags = ["gpqa", "consultancy", "single-agent", "judge", "eval"]
requires-python = ">=3.11"
dependencies = [
    "verifiers>=0.1.12",
    "datasets>=2.14",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["gpqa_consultancy.py", "pyproject.toml", "README.md"]

[tool.verifiers.eval]
num_examples = 198
rollouts_per_example = 4
max_tokens = 2048
temperature = 1.0
