[project]
name = "gpqa-debate"
version = "0.1.0"
description = "GPQA Diamond / Main under a two-debater + judge protocol"
readme = "README.md"
tags = ["gpqa", "debate", "multi-agent", "eval"]
requires-python = ">=3.11"
dependencies = [
    # Renderer is the env default; consumers may pin the concrete verifiers
    # version in their workspace or lockfile.
    "verifiers[renderers]>=0.1.15.dev7",
    "datasets>=2.14",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["gpqa_debate.py", "pyproject.toml", "README.md"]

[tool.verifiers.eval]
api_client_type = "renderer"
num_examples = 5
rollouts_per_example = 3
max_tokens = 1024
temperature = 1.0
