[project]
name = "gpqa-debate"
version = "0.1.0"
description = "GPQA Diamond / Main under a two-debater + judge protocol"
readme = "README.md"
tags = ["gpqa", "debate", "multi-agent", "eval"]
requires-python = ">=3.11"
dependencies = [
    "verifiers",
    "datasets>=2.14",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["gpqa_debate.py", "pyproject.toml", "README.md"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.verifiers.eval]
num_examples = 5
rollouts_per_example = 3
max_tokens = 1024
temperature = 1.0
