[project]
name = "gpqa-open-ended-debate"
version = "0.1.0"
description = "GPQA open-ended (free-form) under a two-debater + judge protocol, with an LLM grader for accuracy"
readme = "README.md"
tags = ["gpqa", "open-ended", "debate", "multi-agent", "eval"]
requires-python = ">=3.11"
dependencies = [
    "verifiers>=0.1.15.dev7",
    "renderers>=0.1.8.dev2",
    "datasets>=2.14",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["gpqa_open_ended_debate.py", "pyproject.toml", "README.md"]

[tool.verifiers.eval]
# Debate-family default: eval via the TITO/renderer path (same token-route as
# training, matching the sibling gpqa-debate). The grader still hits gpt-5.4-mini
# via its own OpenAIChatCompletionsClient regardless. To eval the policy with an
# API model instead, pass `--api-client-type openai_chat_completions` (see README).
api_client_type = "renderer"
num_examples = 5
rollouts_per_example = 3
max_tokens = 4096
temperature = 1.0
