[project]
name = "gpqa-rlvr"
version = "0.1.0"
description = "GPQA Diamond / Main as single-agent RLVR (boxed-letter answer)"
readme = "README.md"
tags = ["gpqa", "rlvr", "single-agent", "eval"]
requires-python = ">=3.11"
dependencies = [
    "verifiers>=0.1.12",
    "datasets>=2.14",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["gpqa_rlvr.py", "pyproject.toml", "README.md"]

[tool.verifiers.eval]
num_examples = 198
rollouts_per_example = 4
max_tokens = 2048
temperature = 1.0
