[project]
name = "hello-group-reward-v1"
version = "0.1.0"
tags = ["v1", "group-reward", "advantage", "lifecycle"]
license = "Apache-2.0"
description = "Deterministic v1 environment that stress-tests group updates, metrics, rewards, advantages, and cleanup."
requires-python = ">=3.11"
dependencies = [
    "verifiers>=0.1.13.dev0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["hello_group_reward_v1.py", "README.md", "pyproject.toml"]

[tool.verifiers.eval]
num_examples = 5
rollouts_per_example = 3
max_tokens = 256
