[project]
name = "hello-mcp-harbor"
description = "Smallest runnable HarborEnv with a framework-managed MCP server."
license = "MIT"
tags = ["eval", "cli_agent", "harbor", "mcp", "demo"]
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "verifiers>=0.1.12.dev3",
    "prime-sandboxes>=0.2.19",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
    "hello_mcp_harbor.py",
    "pyproject.toml",
    "README.md",
    "mcp_server/**/*",
    "tasks/**/*",
]

[tool.verifiers.eval]
num_examples = 5
rollouts_per_example = 3

[tool.ruff]
exclude = ["tasks/**", "mcp_server/**"]
