[project]
name = "hello-parallel-sandbox-v1"
version = "0.1.0"
tags = ["v1", "sandbox", "tool-use", "nested", "llm-judge"]
license = "Apache-2.0"
description = "V1 example with parallel child harnesses sharing a sandbox-backed tool across rollout stages."
requires-python = ">=3.11"
dependencies = [
    "verifiers>=0.1.13.dev0",
    "prime-sandboxes>=0.2.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["hello_parallel_sandbox_v1.py", "README.md", "pyproject.toml"]

[tool.verifiers.eval]
num_examples = 5
rollouts_per_example = 3
max_tokens = 4096
