[project]
name = "hello-rlm-v1"
version = "0.1.0"
tags = ["rlm", "sandbox", "v1"]
license = "Apache-2.0"
description = "Minimal v1 environment that runs the RLM CLI through a sandboxed command harness."
requires-python = ">=3.11"
dependencies = [
    "verifiers>=0.1.13.dev0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["hello_rlm_v1.py", "pyproject.toml"]

[tool.verifiers.eval]
num_examples = 5
rollouts_per_example = 3
