[project]
name = "langchain-deep-agents-wikispeedia"
description = "V1 Taskset/Harness environment training LangChain deep-agents on Wikispeedia navigation"
tags = ["v1", "taskset", "harness", "multi-turn", "tool-use", "langchain", "deep-agents", "wikispeedia", "navigation", "train", "eval"]
version = "0.1.4"
requires-python = ">=3.11,<3.13"
dependencies = [
    "verifiers>=0.1.14",
    "datasets",
    "deepagents>=0.5.5",
    "langgraph",
    "langchain-openai>=1.2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["langchain_deep_agents_wikispeedia.py", "wiki_graph.py", "pyproject.toml"]

[tool.verifiers.eval]
num_examples = 5
rollouts_per_example = 3
