[project]
name = "nested-harness-v1"
version = "0.1.0"
tags = ["nested", "harness", "v1"]
license = "Apache-2.0"
description = "Taskset/harness example for calling a child harness through a tool."
requires-python = ">=3.11"
dependencies = [
    "verifiers>=0.1.13.dev0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["nested_harness_v1.py", "pyproject.toml"]

[tool.verifiers.eval]
num_examples = 5
rollouts_per_example = 3
