[project]
name = "openai-agents-env"
description = "V1 Taskset/Harness environment using the OpenAI Agents SDK"
tags = ["v1", "taskset", "harness", "tool-use", "openai-agents"]
version = "0.1.0"
requires-python = ">=3.11,<3.13"
dependencies = [
    "verifiers>=0.1.13.dev8",
    "datasets",
    "openai-agents>=0.13.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["openai_agents_env.py", "pyproject.toml"]

[tool.verifiers.eval]
num_examples = 5
rollouts_per_example = 3
