[project]
name = "opencode-harbor"
description = "OpenCode v1 taskset/harness agent on Harbor tasks"
license = "MIT"
tags = ["eval", "cli_agent", "v1", "taskset", "harness"]
version = "0.1.2"
requires-python = ">=3.10"
dependencies = [
    "verifiers>=0.1.10.dev4",
    "prime-sandboxes>=0.2.10",
    "tomli>=2.3.0",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["opencode_harbor.py", "pyproject.toml", "tasks/**/*"]

[tool.verifiers.eval]
num_examples = 5
rollouts_per_example = 3

[tool.ruff]
exclude = ["tasks/**"]
