[project]
name = "openenv-textarena"
description = "OpenEnv TextArena (Wordle-v0) environment via the v1 OpenEnv taskset"
tags = ["openenv", "gym", "textarena", "wordle", "example"]
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "verifiers>=0.1.15.dev11",
    "tasksets[openenv]>=0.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
    "openenv_textarena.py",
    "pyproject.toml",
    "README.md",
    "proj/**/*",
    "proj/.build.json",
]

[tool.verifiers.eval]
num_examples = 5
rollouts_per_example = 3
