[project]
name = "rlm-swe-v1"
version = "0.1.0"
description = "v1 RLM harness on R2E-Gym SWE tasks"
license = "Apache-2.0"
tags = ["v1", "rlm", "swe", "cli-agent"]
requires-python = ">=3.11"
dependencies = [
    "datasets",
    "pydantic",
    "verifiers",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["rlm_swe_v1.py", "README.md", "pyproject.toml"]

[project.entry-points."verifiers.environments"]
rlm-swe-v1 = "rlm_swe_v1:load_environment"

[tool.verifiers.eval]
num_examples = 5
rollouts_per_example = 3

[tool.uv.sources]
verifiers = { path = "../..", editable = true }
