[project]
name = "sft-replay"
version = "0.1.0"
description = "Thin v1 environment for replaying stored chat transcripts as SFT trajectories."
tags = ["sft", "replay", "v1", "taskset", "harness", "train"]
requires-python = ">=3.11"
dependencies = [
    "verifiers>=0.1.15.dev11",
    "tasksets>=0.1.5",
    "harnesses>=0.1.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["sft_replay.py", "README.md", "pyproject.toml", "data/**/*"]

[tool.verifiers.eval]
num_examples = 5
rollouts_per_example = 3
